# eloizer

./: .gitignore  CLI.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: analyze.rs  config.rs  init.rs  list_rules.rs  mod.rs  rule_info.rs
src/: lib.rs
src/analyzer/: engine.rs  mod.rs
